--- a/notebooks/EDA_MultiNews.ipynb
+++ b/notebooks/EDA_MultiNews.ipynb
@@ -1193,7 +1193,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mds",
    "language": "python",
    "name": "python3"
   },
